# devicesinlan

./: .gitattributes  .gitignore  CHANGELOG.txt  INSTALL.txt  MANIFEST.in  Makefile  Makefile.bat  Makefile.py  README.md  README.rst  RELEASES.txt  RELEASE_PROCEDURE.txt  devicesinlan.1  devicesinlan.bat  devicesinlan.desktop  devicesinlan.epj  devicesinlan.html  devicesinlan.iss  devicesinlan.pro  devicesinlan.py  devicesinlan_gui.py  distribution.bat  distribution.sh  ieee-oui.txt  known.txt.dist  libdevicesinlan.py  libmangenerator.py  libttyrecgenerator.py  mangenerator.py  pyproject.toml  release.sh  setup.py  setup_freeze.py  ttyrecgenerator.py
database/: dump.sql
devicesinlan/: __init__.py  casts.py  decorators.py  devicesinlan.py  devicesinlan_gui.py  github.py  libdevicesinlan.py  libdevicesinlan_gui.py  poethepoet.py  shortcuts.py  tests.py  version.py
devicesinlan/data/: devicesinlan.en.html  devicesinlan.es.html  devicesinlan.fr.html  devicesinlan.ro.html  devicesinlan.ru.html  devicesinlan_gui.en.html  devicesinlan_gui.es.html  devicesinlan_gui.fr.html  devicesinlan_gui.ro.html  devicesinlan_gui.ru.html  ieee-oui.txt
devicesinlan/i18n/: devicesinlan_es.qm  devicesinlan_es.ts  devicesinlan_fr.qm  devicesinlan_fr.ts  devicesinlan_ro.qm  devicesinlan_ro.ts  devicesinlan_ru.qm  devicesinlan_ru.ts
devicesinlan/images/: devicesinlan.qrc  devicesinlan_rc.py
devicesinlan/reusing/: call_by_name.py  casts.py  datetime_functions.py  libmanagers.py  myqtablewidget.py  package_resources.py  text_inputs.py
devicesinlan/ui/: Ui_frmAbout.py  Ui_frmDeviceCRUD.py  Ui_frmHelp.py  Ui_frmInitGame.py  Ui_frmInterfaceSelector.py  Ui_frmMain.py  Ui_frmSettings.py  devicesinlan_rc.py  frmAbout.py  frmAbout.ui  frmDeviceCRUD.py  frmDeviceCRUD.ui  frmHelp.py  frmHelp.ui  frmInterfaceSelector.py  frmInterfaceSelector.ui  frmMain.py  frmMain.ui  frmSettings.py  frmSettings.ui  myqtablewidget.py  myqtablewidget6.py  qtablewidgetitems.py
doc/: Doxyfile  devicesinlan.en.1  devicesinlan.en.1.html  devicesinlan.es.1  devicesinlan.es.1.html  devicesinlan.fr.1  devicesinlan.fr.1.html  devicesinlan.odt  devicesinlan.ro.1  devicesinlan.ro.1.html  devicesinlan.ru.1  devicesinlan.ru.1.html  devicesinlan_gui.en.1  devicesinlan_gui.en.1.html  devicesinlan_gui.es.1  devicesinlan_gui.es.1.html  devicesinlan_gui.fr.1  devicesinlan_gui.fr.1.html  devicesinlan_gui.ro.1  devicesinlan_gui.ro.1.html  devicesinlan_gui.ru.1  devicesinlan_gui.ru.1.html  generate.sh  index.dox  index.html
doc/sphinx/: Makefile  make.bat
doc/sphinx/source/: code.rst  conf.py  frmmain.rst  guide.rst  index.rst  libdevicesinlan.rst
doc/sphinx/source/locale/es/LC_MESSAGES/: code.po  (+4 more)
doc/ttyrec/: howto.py
i18n/: devicesinlan_es.qm  devicesinlan_es.ts  devicesinlan_fr.qm  devicesinlan_fr.ts  devicesinlan_ro.qm  devicesinlan_ro.ts  devicesinlan_ru.qm  devicesinlan_ru.ts  glparchis_es.ts  glparchis_fr.ts  glparchis_ro.ts  glparchis_ru.ts
images/: devicesinlan.qrc  devicesinlan.xcf  devicesinlan_rc.py
man/es/man1/: devicesinlan.1  devicesinlan_gui.1
man/fr/man1/: devicesinlan.1  devicesinlan_gui.1
man/man1/: devicesinlan.1  devicesinlan_gui.1
man/ro/man1/: devicesinlan.1  devicesinlan_gui.1
man/ru/man1/: devicesinlan.1  devicesinlan_gui.1
po/: devicesinlan.pot  es.po
statistics/: index.html
statistics/php/: devicesinlan_installations.php  devicesinlan_statistics.php
ui/: Ui_frmAbout.py  Ui_frmDeviceCRUD.py  Ui_frmHelp.py  Ui_frmInitGame.py  Ui_frmInterfaceSelector.py  Ui_frmMain.py  Ui_frmSettings.py  frmAbout.py  frmAbout.ui  frmDeviceCRUD.py  frmDeviceCRUD.ui  frmHelp.py  frmHelp.ui  frmInterfaceSelector.py  frmInterfaceSelector.ui  frmMain.py  frmMain.ui  frmSettings.py  frmSettings.ui
(+20 files in other folders)
