[tool.poetry]
name = "devicesinlan"
version = "1.9.999"
description = "Find devices in a LAN and allows to make a list of known devices in order to detect not allowed ones"
authors = ["turulomio <turulomio@yahoo.es>"]
license = "GPL-3.0 license"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
colorama = "^0.4.6"
pyqt6 = "^6.6.1"
scapy = "^2.5.0"
pydicts = "^0.15.0"

[tool.poetry.group.dev.dependencies]
poetry = "^1.8.2"
poethepoet = "^0.25.0"
qt6-tools = "^6.5.0.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
devicesinlan = 'devicesinlan.devicesinlan:main_console'
devicesinlan_gui = 'devicesinlan.devicesinlan:main_gui'

[tool.poe.tasks]
release = { script = "devicesinlan.poethepoet:release" }
translate = { script = "devicesinlan.poethepoet:translate" }
compile = { script = "devicesinlan.poethepoet:compile" }
reusing = { script = "devicesinlan.poethepoet:reusing" }
pyinstaller = { script = "devicesinlan.poethepoet:pyinstaller" }