[tool.poetry]
name = "devicesinlan"
version = "2.0.1"
description = "Find devices in a LAN and allows to make a list of known devices in order to detect not allowed ones"
authors = ["turulomio <turulomio@yahoo.es>"]
license = "GPL-3.0 license"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4"
colorama =" >=0.4.6"
PyQt6 = ">=6.8.0"
scapy = ">=2.6.1"
pydicts = ">=0.17.0"
tqdm = ">=4.67.1"

[tool.poetry.group.dev.dependencies]
poetry = ">=1.8.5"
poethepoet = ">=0.32.0"
qt6-tools = ">=6.5.0.1.3"
mangenerator = ">=0.4.0"
pytest = ">=8.3.4"
coverage = ">=7.6.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
devicesinlan = 'devicesinlan.devicesinlan:main_console'
devicesinlan_gui = 'devicesinlan.devicesinlan:main_gui'

[tool.poe.tasks]
release = { script = "devicesinlan.poethepoet:release" }
translate = { script = "devicesinlan.poethepoet:translate" }
compile = { script = "devicesinlan.poethepoet:compile" }
reusing = { script = "devicesinlan.poethepoet:reusing" }
pyinstaller = { script = "devicesinlan.poethepoet:pyinstaller" }
statistics_server = { script = "devicesinlan.poethepoet:statistics_server" }
tests = { script ="devicesinlan.poethepoet:tests" }