[project]
name = "devicesinlan"
version = "2.0.2"
description = "Find devices in a LAN and allows to make a list of known devices in order to detect not allowed ones"
authors = [
    {name = "turulomio", email = "turulomio@yahoo.es"},
]
license = "GPL-3.0-or-later"
readme = "README.md"
requires-python = ">=3.10,<4"
dependencies = [
    "colorama >=0.4.6",
    "PyQt6 >=6.10.1",
    "scapy >=2.7.0",
    "pydicts >=1.1.0",
    "tqdm >=4.67.1",
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
poetry = ">=2.2.1"
poethepoet = ">=0.39.0"
qt6-tools = ">=6.5.0.1.3"
mangenerator = ">=0.4.0"
pytest = ">=9.0.2"
coverage = ">=7.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
devicesinlan = 'devicesinlan.devicesinlan:main_console'
devicesinlan_gui = 'devicesinlan.devicesinlan:main_gui'

[tool.poe.tasks]
release = { script = "devicesinlan.poethepoet:release" }
translate = { script = "devicesinlan.poethepoet:translate" }
compile = { script = "devicesinlan.poethepoet:compile" }
reusing = { script = "devicesinlan.poethepoet:reusing" }
pyinstaller = { script = "devicesinlan.poethepoet:pyinstaller" }
statistics_server = { script = "devicesinlan.poethepoet:statistics_server" }
tests = { script ="devicesinlan.poethepoet:tests" }